transpile after install

--- a/package.json
+++ b/package.json
@@ -1,49 +1,50 @@
 {
-  "name": "@entur/sdk",
-  "version": "0.11.4",
-  "license": "EUPL-1.2",
-  "main": "./lib/index.js",
-  "repository": "github:entur/sdk",
-  "bugs": {
-    "url": "https://github.com/entur/sdk/issues"
-  },
-  "browser": {
-    "./lib/fetch.js": "./lib/fetch.browser.js"
-  },
-  "typings": "./index.d.ts",
-  "scripts": {
-    "lint": "eslint src/ example/",
-    "test": "echo 'There are no tests'",
-    "flow": "flow",
-    "ts": "tsc index.d.ts --noEmit",
-    "transpile": "rm -rf lib && babel src --out-dir lib --copy-files",
-    "prepublishOnly": "npm run ts && npm run transpile"
-  },
-  "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "@turf/bbox": "^6.0.1",
-    "@turf/destination": "^6.0.1",
-    "clean-deep": "^3.0.2",
-    "json-to-graphql-query": "^1.9.0",
-    "node-fetch": "^2.6.0",
-    "promise-throttle": "^1.0.1",
-    "qs": "^6.7.0",
-    "turf-linestring": "^1.0.2",
-    "turf-point": "^2.0.1"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-flow": "^7.0.0",
-    "babel-eslint": "^10.0.2",
-    "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-plugin-flowtype": "^3.12.1",
-    "eslint-plugin-import": "^2.18.2",
-    "flow-bin": "^0.89.0",
-    "typescript": "^3.5.3"
-  }
+    "name": "@entur/sdk",
+    "version": "0.11.4",
+    "license": "EUPL-1.2",
+    "main": "./lib/index.js",
+    "repository": "github:entur/sdk",
+    "bugs": {
+        "url": "https://github.com/entur/sdk/issues"
+    },
+    "browser": {
+        "./lib/fetch.js": "./lib/fetch.browser.js"
+    },
+    "typings": "./index.d.ts",
+    "scripts": {
+        "lint": "eslint src/ example/",
+        "test": "echo 'There are no tests'",
+        "flow": "flow",
+        "ts": "tsc index.d.ts --noEmit",
+        "transpile": "rm -rf lib && babel src --out-dir lib --copy-files",
+        "prepublishOnly": "npm run ts && npm run transpile",
+        "postinstall": "npm run transpile"
+    },
+    "dependencies": {
+        "@babel/polyfill": "^7.4.4",
+        "@turf/bbox": "^6.0.1",
+        "@turf/destination": "^6.0.1",
+        "clean-deep": "^3.0.2",
+        "json-to-graphql-query": "^1.9.0",
+        "node-fetch": "^2.6.0",
+        "promise-throttle": "^1.0.1",
+        "qs": "^6.7.0",
+        "turf-linestring": "^1.0.2",
+        "turf-point": "^2.0.1"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.5.5",
+        "@babel/core": "^7.5.5",
+        "@babel/plugin-proposal-class-properties": "^7.5.5",
+        "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+        "@babel/preset-env": "^7.5.5",
+        "@babel/preset-flow": "^7.0.0",
+        "babel-eslint": "^10.0.2",
+        "eslint": "^6.1.0",
+        "eslint-config-airbnb": "^17.1.1",
+        "eslint-plugin-flowtype": "^3.12.1",
+        "eslint-plugin-import": "^2.18.2",
+        "flow-bin": "^0.89.0",
+        "typescript": "^3.5.3"
+    }
 }
