--- a/package.json
+++ b/package.json
@@ -17,17 +17,9 @@
         "flow": "flow",
         "ts": "tsc index.d.ts --noEmit",
         "transpile": "rm -rf lib && babel src --out-dir lib --copy-files",
-        "prepublishOnly": "npm run ts && npm run transpile",
-        "postinstall": "npm run transpile"
+        "prepublishOnly": "npm run ts && npm run transpile"
     },
     "dependencies": {
-        "@babel/cli": "^7.5.5",
-        "@babel/core": "^7.5.5",
-        "@babel/plugin-proposal-class-properties": "^7.5.5",
-        "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-        "@babel/preset-env": "^7.5.5",
-        "@babel/preset-flow": "^7.0.0",
-        "babel-eslint": "^10.0.2",
         "@babel/polyfill": "^7.4.4",
         "@turf/bbox": "^6.0.1",
         "@turf/destination": "^6.0.1",
@@ -40,6 +32,13 @@
         "turf-point": "^2.0.1"
     },
     "devDependencies": {
+        "@babel/cli": "^7.5.5",
+        "@babel/core": "^7.5.5",
+        "@babel/plugin-proposal-class-properties": "^7.5.5",
+        "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+        "@babel/preset-env": "^7.5.5",
+        "@babel/preset-flow": "^7.0.0",
+        "babel-eslint": "^10.0.2",
         "eslint": "^6.1.0",
         "eslint-config-airbnb": "^17.1.1",
         "eslint-plugin-flowtype": "^3.12.1",
